플래너 삭제 시 자료보관함 보관 항목 유지
- 단일/선택/전체삭제 모두 자료보관함 PLANNER 항목을 삭제하지 않고 독립 자료로 남긴다(plannerId 해제, 스냅샷 보장, 다운로드 PDF 소유권 이관)
- 보관 항목이 없을 때만 다운로드 PDF S3 정리; 원본 플래너가 없는 보관 항목도 넘겨받은 PDF로 미리보기 유지
- 삭제 확인 문구 수정, 회귀 테스트를 새 계약으로 갱신, 스냅샷 폴백 테스트 기대값 정정